hphp/test/slow/parser/php-reserved-name-float-1.php.expectf
Fatal error: Cannot use 'Float' as class name as it is reserved in %s/php-reserved-name-float-1.php on line 6